fix: make changelog links lighter in dark mode

--- a/assets/styles/styles_dark.css
+++ b/assets/styles/styles_dark.css
@@ -96,8 +96,8 @@
 }
 
 .dark main.changelog a {
-  color: #333;
-  border-bottom: 1px solid #333;
+  color: #ccc;
+  border-bottom: 1px solid #ccc;
 }
 
 .dark main.changelog a:hover {
